Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50876

Custom user agent is not carried over when opening a new tab/page via HTML form button

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.9.2
    • 5.6.0 Beta
    • WebEngine
    • None
    • Qt 5.6.0

      Very similar to QTBUG-48891 (which has been fixed): when opening a new page (ctrl+click or middle click) from HTML form button, the custom user agent of the source page is not kept.

      To reproduce this issue:

      • compile and run QtWebEngine demobrowser example,
      • setup a custom UA (Edit > Preferences > Advanced),
      • download and load the attached index.html in demobrowser,
      • ctrl+click on the link, the reported UA is correct,
      • ctrl+click on the button, the reported UA is wrong,
      • click (no new page) on the button, the UA is correct.

        1. index.html
          0.3 kB
          Simon Brunel
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            simon.brunel Simon Brunel
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes