Carry over user-agent override when opening new windows

Windows opened by blink instead of the requested by the user has no
opportunity to set user-agent override. RenderFrameImpl will try to
set it based on the last request on the frame, but when a new window
is opened there is only a blank last request where override has not
been set.

This patch will set the user-agent override on the initial blank request
on a new frame based on the setting of opener.

Task-number: QTBUG-50876
Task-number: QTBUG-61174
Change-Id: I8ec0163bbdeebdbd0a7d8a42ef089b14b4f8803c
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>