chromium/content/renderer/render_frame_impl.cc
@@ -3596,12 +3596,15 @@ void RenderFrameImpl::DidCreateDataSource(blink::WebLocalFrame* frame,
   }
 
   // Carry over the user agent override flag, if it exists.
-  blink::WebView* webview = render_view_->webview();
-  if (content_initiated && webview && webview->MainFrame() &&
-      webview->MainFrame()->IsWebLocalFrame() &&
-      webview->MainFrame()->DataSource()) {
-    DocumentState* old_document_state =
-        DocumentState::FromDataSource(webview->MainFrame()->DataSource());
+  if (content_initiated) {
+    blink::WebView* webview = render_view_->webview();
+    blink::WebDataSource *lastDataSource = nullptr;
+    if (webview && webview->MainFrame() && webview->MainFrame()->IsWebLocalFrame()) 
+      lastDataSource = webview->MainFrame()->DataSource();
+    if (!lastDataSource && frame->Opener() && frame->Opener()->IsWebLocalFrame())
+      lastDataSource = frame->Opener()->DataSource();  
+    DocumentState* old_document_state = lastDataSource ?
+      DocumentState::FromDataSource(lastDataSource) : nullptr;
     if (old_document_state) {
       InternalDocumentStateData* internal_data =
           InternalDocumentStateData::FromDocumentState(document_state);
